added the buffer as parameter for constructors of board and playercontroller, modified the language of sdk to 21 to handle virtual threads